--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,25 +1,26 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
+  "manifest_version": 3,
+  "name": "Google Maps Marker Extension",
+  "version": "3.0",
+  "description": "Add custom markers to Google Maps.",
+  "permissions": ["storage", "tabs", "activeTab"],
+  "externally_connectable": {
+    "matches": ["https://www.google.com/maps/*"]
+  },
+
+
+  "background": {
+    "service_worker": "../src/background.js"
+  },
+  "content_scripts": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "matches": ["https://www.google.com/maps/*"],
+      "js": ["content.js"]
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": "icon.png"
+  },
+  "host_permissions": ["https://www.google.com/maps/*"]
 }
