--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,8 @@
     "@babel/preset-react": "^7.25.9",
     "babel-loader": "^9.2.1",
     "copy-webpack-plugin": "^12.0.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "@google/generative-ai": "0.15.0",
+    "rollup": "4.22.4"
   }
 }
