--- a/frontend/manifest.json
+++ b/frontend/manifest.json
@@ -12,10 +12,11 @@
     "declarativeNetRequestFeedback",
     "webNavigation",
     "sidePanel",
-    "aiLanguageModelOriginTrial"
+    "aiLanguageModelOriginTrial",
+    "geolocation"
   ],
 
-  
+
   "host_permissions": [
     "https://www.google.com/maps/*"
   ],
